fixed the resizing of the leaf image with different browser sizes

--- a/index.html
+++ b/index.html
@@ -11,19 +11,13 @@
   <body>
     <div class="maincontainer">
       <div class="leftside">
-        <div class="leaf">
-            <img src="images/greenleaves.avif" id="leaves" alt="Beautiful Green Leaves">
-            <div class="logo">
-                <img src="images/odin-lined.png" id="facelogo" alt="Odin Face Logo">
-                ODIN
-            </div>
-        </div>
-       
+          <div class="leaf"><img src="images/greenleaves.avif" id="leaves" alt=""></div>
+          <div class="odinlogo"></div>
       </div>
       <div class="rightside">
-          <div class="top"></div>
-          <div class="middle"></div>
-          <div class="bottom"></div>
+        <div class="top"></div>
+        <div class="middle"></div>
+        <div class="bottom"></div>
       </div>
     </div>
   </body>
