--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
   </head>
   <body>
     <div class="maincontainer">
-      <div class="leftside">
-          <div class="leaf"><img src="images/greenleaves.avif" id="leaves" alt=""></div>
-          <div class="odinlogo"></div>
+      <div class="leaf">
+        <img src="images/greenleaves.avif" id="leaves" alt="Green Leaves" />
       </div>
-      <div class="rightside">
-        <div class="top"></div>
-        <div class="middle"></div>
-        <div class="bottom"></div>
-      </div>
+      <div class="odinlogo"></div>
+
+      <div class="rightside"></div>
     </div>
   </body>
 </html>
