maybe fixed resizing the left side this time

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   </head>
   <body>
     <div class="maincontainer">
-      <div class="leaf">
-        <img src="images/greenleaves.avif" id="leaves" alt="Green Leaves" />
+      <div class="leftcontainer">
+        <img src="images/greenleaves.avif" alt="Leaves" class="leaf-image" />
+        <div class="odin-body">
+            <img src="images/odin-lined.png" class="odin-img" alt="odin image">
+            ODIN</div>
       </div>
-      <div class="odinlogo"></div>
-
-      <div class="rightside"></div>
+      <div class="rightcontainer"></div>
     </div>
   </body>
 </html>
