Finally got the left side to my liking and responsiveness.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <script src="signupjs.js" defer></script>
   </head>
   <body>
-    <div class="maincontainer">
-      <div class="leftcontainer">
-        <img src="images/greenleaves.avif" alt="Leaves" class="leaf-image" />
-        <div class="odin-body">
-            <img src="images/odin-lined.png" class="odin-img" alt="odin image">
-            ODIN</div>
+    <div class="container">
+      <div class="left-cont">
+        <div class="green-cont">
+            <img src="images/greenleaves.avif" alt="Beautiful Green Leaves" class="leaves">
+        </div>
+        <div class="black-cont"> <img src="images/odin-lined.png" alt="Odin Head" class="odin-logo"> ODIN</div>
       </div>
-      <div class="rightcontainer"></div>
     </div>
   </body>
 </html>
