yet another attempt at getting the left side to resize properly in preparation to have the right side resize properly

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="left-cont">
-        <div class="green-cont">
-            <img src="images/greenleaves.avif" alt="Beautiful Green Leaves" class="leaves">
-        </div>
-        <div class="black-cont"> <img src="images/odin-lined.png" alt="Odin Head" class="odin-logo"> ODIN</div>
+      <div class="leftside">
+        <div class="leafdiv"><img src="images/greenleaves.avif" alt="leaves" class="leafpic"></div>
+        <div class="blackdiv"><img src="images/odin-lined.png" alt="odin-image" class="odinpic"><p class="odintext">ODIN</p></div>
       </div>
+      <div class="rightside"></div>
     </div>
   </body>
 </html>
