--- a/index.html
+++ b/index.html
@@ -7,14 +7,52 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <script src="signupjs.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="leftside">
-        <div class="leafdiv"><img src="images/greenleaves.avif" alt="leaves" class="leafpic"></div>
-        <div class="blackdiv"><img src="images/odin-lined.png" alt="odin-image" class="odinpic"><p class="odintext">ODIN</p></div>
+        <div class="leafdiv">
+          <img src="images/greenleaves.avif" alt="leaves" class="leafpic" />
+        </div>
+        <div class="blackdiv">
+          <img src="images/odin-lined.png" alt="odin-image" class="odinpic" />
+          <p class="odintext">ODIN</p>
+        </div>
       </div>
-      <div class="rightside"></div>
+      <div class="rightside">
+        <div class="right-top">
+          <p class="toptext">
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. <br />
+            Sign up <i>now</i> to get started.
+            <br />
+            <br />
+            You <i>know</i> you want to.
+          </p>
+        </div>
+        <div class="right-middle">
+          <p class="midtext">Let's do this!</p>
+          <div class="forms">
+            <div class="leftforms">
+              <form action=""></form>
+              <form action=""></form>
+              <form action=""></form>
+            </div>
+            <div class="rightforms">
+              <form action=""></form>
+              <form action=""></form>
+              <form action=""></form>
+            </div>
+          </div>
+        </div>
+        <div class="right-bottom"></div>
+      </div>
     </div>
   </body>
 </html>
